- Add FETCH_PROPSLATE: fetch props after calling ctor # Fixes bug #36428

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@207888 c90b9560-bf6c-de11-be94-00142212c4b1